--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -1,7 +1,7 @@
 name: Publish Docker Image
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
