--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -5,6 +5,9 @@ global
     pidfile /run/haproxy.pid
     maxconn 4000
 
+    # Turn on stats unix socket
+    server-state-file /var/lib/haproxy/server-state
+
 defaults
     mode http
     log global
@@ -21,6 +24,9 @@ defaults
     timeout http-keep-alive 10s
     timeout check 10s
     maxconn 3000
+
+    # Allow seamless reloads
+    load-server-state-from-file global
 
     # Use provided example error pages
     errorfile 400 /usr/local/etc/haproxy/errors/400.http
