chore: update bind config

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -38,7 +38,7 @@ defaults
     errorfile 504 /usr/local/etc/haproxy/errors/504.http
 
 frontend docker_frontend
-    bind :2375
+    bind [::]:2375 v4v6
 
     # http-request deny if !{ path_beg -i /${AUTH_TOKEN} }
     # http-request set-uri %[url,regsub(^/${AUTH_TOKEN},,)] 
