--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -5,9 +5,6 @@ global
     pidfile /run/haproxy.pid
     maxconn 4000
 
-    # Turn on stats unix socket
-    server-state-file /var/lib/haproxy/server-state
-
 defaults
     mode http
     log global
@@ -25,9 +22,6 @@ defaults
     timeout check 10s
     maxconn 3000
 
-    # Allow seamless reloads
-    load-server-state-from-file global
-
     # Use provided example error pages
     errorfile 400 /usr/local/etc/haproxy/errors/400.http
     errorfile 403 /usr/local/etc/haproxy/errors/403.http
@@ -38,10 +32,10 @@ defaults
     errorfile 504 /usr/local/etc/haproxy/errors/504.http
 
 frontend docker_frontend
-    bind [::]:2375 v4v6
+    bind :2375
 
-    # http-request deny if !{ path_beg -i /${AUTH_TOKEN} }
-    # http-request set-uri %[url,regsub(^/${AUTH_TOKEN},,)] 
+    http-request deny if !{ path_beg -i /${AUTH_TOKEN} }
+    http-request set-uri %[url,regsub(^/${AUTH_TOKEN},,)] 
 
     http-request allow if { path,url_dec -m reg -i ^(/v[\d\.]+)?/_ping } METH_GET { env(PING_READ) -m bool }
     http-request allow if { path,url_dec -m reg -i ^(/v[\d\.]+)?/_ping } METH_HEAD { env(PING_READ) -m bool }
